[gd_scene load_steps=8 format=3 uid="uid://cx2q0175sndn1"]

[ext_resource type="Script" path="res://Levels/parallax_background.gd" id="1_5fop7"]
[ext_resource type="Texture2D" uid="uid://8eoderlm5ugi" path="res://Art/parallax-demon-woods-far-trees.png" id="1_l86hj"]
[ext_resource type="Script" path="res://Levels/real_main_mennu.gd" id="1_ogdj2"]
[ext_resource type="Texture2D" uid="uid://cap76b87sdc6q" path="res://Art/parallax-demon-woods-mid-trees.png" id="2_4i2fv"]
[ext_resource type="Texture2D" uid="uid://dny6ox73axoev" path="res://Art/parallax-demon-woods-close-trees.png" id="3_mcpa3"]
[ext_resource type="FontFile" uid="uid://dun3c44uk7quc" path="res://Art/alagard.ttf" id="6_jl0bf"]
[ext_resource type="PackedScene" path="res://StageEntities/music_manager.tscn" id="7_6yo1x"]

[node name="Control" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ogdj2")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_5fop7")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(2.08615, 2.48897)
texture = ExtResource("1_l86hj")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2(2.08784, 2.47059)
texture = ExtResource("2_4i2fv")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1.5, 1.5)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
scale = Vector2(2.09291, 2.47426)
texture = ExtResource("3_mcpa3")
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = -1.0
offset_right = 1152.0
offset_bottom = 650.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_jl0bf")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_jl0bf")
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_jl0bf")
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 169.0
offset_right = 1149.0
offset_bottom = 209.0
alignment = 1

[node name="Title" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.568627, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_jl0bf")
theme_override_font_sizes/font_size = 70
text = "Coriander's Quest"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_right = 1151.0
offset_bottom = 648.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Creators: Ryan Miecznikowski, Aaron Nussbaum, and Emily Wasowski.
Background Assets: Demon Woods Parallax Background - aethrall
Character Sprites: Character Satyr - Lucky Loops (Coriander)
Terrain: Fantasy Swamp Forest Tileset - The Flavare
Decorations: Stringstar Fields - Trixielized (lights, trees), 
                        Fantasy Swamp Forest Tileset (rocks, mushrooms)
Obstacles: thingy - person (brambles)
Sound Files: misc places"

[node name="BackCredits" type="Button" parent="HBoxContainer3/VBoxContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_jl0bf")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Music Manager" parent="." instance=ExtResource("7_6yo1x")]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer3/VBoxContainer/BackCredits" to="." method="_on_back_credits_pressed"]
